fixed nav bar alignment

--- a/about/about.css
+++ b/about/about.css
@@ -141,6 +141,10 @@ footer {
       width: 97vw;
     }
 
+    nav {
+      text-align: center;
+    }
+
     .socials-logo {
       width: 60px;
     }
@@ -151,6 +155,10 @@ footer {
       width: 97vw;
     }
 
+    nav {
+      text-align: center;
+    }
+
     .socials-logo {
       width: 40px;
     }
@@ -159,6 +167,10 @@ footer {
   @media (min-width: 1200px) {
     body {
       width: 97vw;
+    }
+
+    nav {
+      text-align: center;
     }
 
     .socials-logo {
