--- a/blog/blog.css
+++ b/blog/blog.css
@@ -189,6 +189,10 @@ nav ul li a:hover {
       width: 97vw;
     }
 
+    nav {
+      text-align: center;
+    }
+
     .blog-post {
       width: 100%;
       height: 100%;
@@ -234,6 +238,10 @@ nav ul li a:hover {
       width: 97vw;
     }
 
+    nav {
+      text-align: center;
+    }
+
     .blog-post {
       width: 100%;
       height: 100%;
@@ -275,6 +283,10 @@ nav ul li a:hover {
   @media (min-width: 1200px) {
     body {
       width: 97vw;
+    }
+
+    nav {
+      text-align: center;
     }
 
     .blog-post {
