--- a/gallery/gallery.css
+++ b/gallery/gallery.css
@@ -161,6 +161,10 @@ footer {
       width: 97vw;
     }
 
+    nav {
+      text-align: center;
+    }
+
     .socials-logo {
       width: 60px;
     }
@@ -171,6 +175,10 @@ footer {
       width: 97vw;
     }
 
+    nav {
+      text-align: center;
+    }
+
     .socials-logo {
       width: 70px;
     }
@@ -179,6 +187,10 @@ footer {
   @media (min-width: 1200px) {
     body {
       width: 97vw;
+    }
+
+    nav {
+      text-align: center;
     }
 
     .socials-logo {
